# computer_vision_web_template

./: Cargo.toml
src/: main.rs
templates/: index.html
