[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
actix-web = "4"
actix = "0.13.0"
actix-web-actors = "4.1.0"
actix-files = "0.6.0"

[build-dependencies]
askama = "0.11.0"
